--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "bitgesell-wallet-js-frontend-core",
-  "version": "0.7.0",
-  "description": "Bitgesell Wallet JS Frontend Core",
-  "main": "local-server.js",
-  "author": "epexa",
+  "name": "bitgesell-wallet-js",
+  "version": "0.7.1",
+  "description": "Bitgesell Wallet JS",
+  "homepage": "https://app.bglwallet.io",
+  "bugs": "https://github.com/epexa/bitgesell-wallet-js/issues",
   "license": "Proprietary",
+  "author": "epexa",
+  "main": "local-server.js",
+  "repository": "epexa/bitgesell-wallet-js",
   "config": {
     "IP": "127.0.0.1",
     "PORT": "80",
-    "DIST_FOLDER": "../bitgesell-wallet-js-frontend-core-dist"
+    "DIST_FOLDER": "../bitgesell-wallet-js-dist"
   },
   "scripts": {
     "test": "eslint 'src/*.js'",
     "local-server": "IP=$npm_package_config_IP PORT=$npm_package_config_PORT node local-server.js",
     "start": "npm test && npm run local-server",
-    "build": "./build.sh",
+    "build": "./build.sh $npm_package_config_DIST_FOLDER",
     "dist-start": "npm run build && DIST_FOLDER=$npm_package_config_DIST_FOLDER npm run local-server"
   },
   "husky": {
