--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bitgesell-wallet",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "description": "Bitgesell Wallet JS",
   "homepage": "https://app.bglwallet.io",
   "bugs": "https://github.com/epexa/bitgesell-wallet/issues",
@@ -25,9 +25,6 @@
       "pre-commit": "npm test"
     }
   },
-  "dependencies": {
-    "express": "^4.16.4"
-  },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.4.0",
@@ -35,6 +32,7 @@
     "clean-css-cli": "^4.2.1",
     "eslint": "^5.15.3",
     "eslint-config-google": "^0.12.0",
+    "express": "^4.16.4",
     "html-minifier": "^3.5.21",
     "husky": "^2.3.0",
     "uglify-js": "^3.5.2"
