--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bitgesell-wallet",
-  "version": "0.9.7",
+  "version": "0.9.8",
   "description": "Bitgesell Wallet JS",
   "homepage": "https://app.bglwallet.io",
   "bugs": "https://github.com/epexa/bitgesell-wallet/issues",
@@ -14,27 +14,27 @@
     "DIST_FOLDER": "../bitgesell-wallet-dist"
   },
   "scripts": {
-    "test": "eslint 'src/*.js'",
+    "eslint": "eslint 'src/**/*.js'",
     "local-server": "IP=$npm_package_config_IP PORT=$npm_package_config_PORT node local-server.js",
-    "start": "npm test && npm run local-server",
+    "start": "npm run eslint && npm run local-server",
     "build": "./build.sh $npm_package_config_DIST_FOLDER",
     "dist-start": "npm run build && DIST_FOLDER=$npm_package_config_DIST_FOLDER npm run local-server"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm test"
+      "pre-commit": "npm run eslint"
     }
   },
   "devDependencies": {
-    "@babel/cli": "^7.22.10",
-    "@babel/core": "^7.22.10",
-    "@babel/preset-env": "^7.22.10",
-    "clean-css-cli": "^5.6.2",
-    "eslint": "^8.46.0",
+    "@babel/cli": "^7.26.4",
+    "@babel/core": "^7.26.9",
+    "@babel/preset-env": "^7.26.9",
+    "clean-css-cli": "^5.6.3",
+    "eslint": "^9.21.0",
     "eslint-config-google": "^0.14.0",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "html-minifier": "^4.0.0",
-    "husky": "^8.0.3",
+    "husky": "^9.1.7",
     "uglify-js": "^3.17.4"
   }
 }
