--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "eslint-config-google": "^0.14.0",
     "husky": "^9.1.7",
     "parcel": "^2.14.1",
-    "serve": "^14.2.4"
+    "serve": "^14.2.4",
+    "svgo": "^3.3.2"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
